syntax = "proto3";

package sorting;

// Key를 bytes로 전송 (10 바이트)
message ProtoKey {
  bytes key = 1;
}

message RegisterRequest {
  string workerId = 1;
}

message RegisterReply {
  int32 assignedState = 1;
  repeated ProtoKey splitters = 2;
  repeated string allWorkerIds = 3;
}

message SampleRequest {
  string workerId = 1;
  repeated ProtoKey samples = 2;
}

message SampleReply {
  bool ack = 1;
}

message NotifyRequest {
  string workerId = 1;
  string message = 2;
}

message NotifyReply {
  bool ack = 1;
}

message HeartbeatRequest {
  string worker_id = 1;
}

message HeartbeatReply {
  enum WorkerState {
    Unregistered = 0;
    Sampling = 1;
    Shuffling = 2;
    Merging = 3;
    Done = 4;
    Failed = 5;
    Waiting = 6;
  }
  WorkerState state = 1;
  repeated ProtoKey splitters = 2;
  repeated string all_worker_ids = 3;
}

// [추가됨] 셔플 데이터 전송용 메시지
message ShuffleRecord {
  bytes data = 1; // 100 bytes record
}

message ShuffleReply {
  bool success = 1;
}

service SortingService {
  rpc RegisterWorker (RegisterRequest) returns (RegisterReply);
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatReply);
  rpc SubmitSamples (SampleRequest) returns (SampleReply);
  rpc NotifyShuffleComplete (NotifyRequest) returns (NotifyReply);
  rpc NotifyMergeComplete (NotifyRequest) returns (NotifyReply);
}

// [추가됨] 워커 간 통신 서비스
service WorkerService {
  // Client-side Streaming: 클라이언트(송신 워커)는 여러 개의 레코드를 스트림으로 보내고,
  // 서버(수신 워커)는 다 받으면 한 번의 Reply를 보냅니다.
  rpc Shuffle (stream ShuffleRecord) returns (ShuffleReply);
}